--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,5 @@
 .container {
-    max-width: 1440px;
+    max-width: 1240px;
     margin: 0 auto;
     overflow: auto;
     padding: 0 10px;
@@ -267,4 +267,74 @@
   .form-control-2 {
     display: flex;
     gap:10px
+  } 
+
+
+  /* Modal */
+
+  .modal {
+    z-index: 10;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 400ms ease-in-out;
   }
+
+  .modal.active {
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  .input-control {
+    outline: none;
+    padding: 8px 12px;
+    font-family: inherit;
+    font-size: 16px;
+    border-radius: 8px;
+    border: 1px solid #c9c9c7;
+    width: 100%;
+  }
+
+  #overlay.active {
+    opacity: 1;
+    pointer-events: all;
+  }
+
+  #overlay {
+    position: fixed;
+    background-color: rgb(0, 0, 0, 0.4);
+    transition: 400ms ease-in-out;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    pointer-events: none;
+    opacity: 0;
+  }
+
+  /* forms */
+
+.input-control:focus {
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+.input-control.error {
+  border: 1px solid red;
+  box-shadow: -2px 1px 7px 2px rgba(247, 103, 103, 0.1);
+  -webkit-box-shadow: -2px 1px 7px 2px rgba(247, 103, 103, 0.1);
+  -moz-box-shadow: -2px 1px 7px 2px rgba(247, 103, 103, 0.1);
+}
+
+.error-msg {
+  font-size: 18px;
+  font-weight: bold;
+  opacity: 0.9;
+}
+.error-msg.error {
+  color: red;
+  font-size: 15px;
+}
+
+.success{
+    color: rgb(85, 138, 5);
+}
