--- a/css/styles.css
+++ b/css/styles.css
@@ -198,6 +198,7 @@ header {
   border-radius: 6px;
   position: relative;
   transition: transform 0.3s ease-in-out;
+  margin-bottom: 15px;
 }
 
 .books .book-item:hover {
@@ -205,7 +206,6 @@ header {
 }
 
 .book-item img {
-  width: inherit;
   height: 250px;
   cursor: pointer;
   transition: transform 0.4s ease-in;
