--- a/css/user.css
+++ b/css/user.css
@@ -150,7 +150,7 @@ cursor: pointer;
   align-items: center;
   height: auto;
   padding: 0;
-  width: 95%;
+  width: 97%;
 }
 
 .user-books .ul .active {
@@ -162,6 +162,9 @@ cursor: pointer;
   font-size: 1.4rem;
 }
 
+/* .form-active{
+  display: none;
+} */
 
 /* Overlay */
 
@@ -191,7 +194,6 @@ cursor: pointer;
   left: 50%;
   transform: translate(-50%, -50%) scale(0);
   transition: 400ms ease-in-out;
-  /* width: 500px */
 }
 
 #add-book {
@@ -213,32 +215,17 @@ cursor: pointer;
   transform: translate(-50%, -50%) scale(1);
 }
 
-/* forms */
+/* Request */
 
-.input-control:focus {
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+.span-link{
+  text-decoration: underline;
+  cursor: pointer;
 }
 
-.input-control.error {
-  border: 1px solid red;
-  box-shadow: -2px 1px 7px 2px rgba(247, 103, 103, 0.1);
-  -webkit-box-shadow: -2px 1px 7px 2px rgba(247, 103, 103, 0.1);
-  -moz-box-shadow: -2px 1px 7px 2px rgba(247, 103, 103, 0.1);
+.books-request .card{
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+  width: 97%;
 }
 
-.error-msg {
-  font-size: 18px;
-  font-weight: bold;
-  opacity: 0.9;
-}
-.error-msg.error {
-  color: red;
-  font-size: 15px;
-}
-
-.success{
-    color: rgb(85, 138, 5);
-}
-
-
-input[]
