--- a/css/custom.css
+++ b/css/custom.css
@@ -1,8 +1,12 @@
+html{
+  scroll-behavior: smooth;
+}
+
 .container {
-    max-width: 1240px;
+    max-width: 1440px;
     margin: 0 auto;
     overflow: auto;
-    padding: 0 10px;
+    padding: 0 20px;
   }
   
   .card {
@@ -159,16 +163,19 @@
   }
   
   .grid-3 {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, minmax(220px,1fr));
     justify-content: space-between;
-    gap:20px;
+    gap:10px;
     display: grid;
   }
 
   .grid-5 {
-    grid-template-columns: repeat(5, 1fr);
+    /* grid-template-columns: repeat(5, 1fr); */
+    grid-template-columns: repeat(auto-fit, minmax(220px,1fr));
     justify-content: space-between;
-    gap:20px;
+    gap: 20px;
+    margin: auto;
+    
   }
   
   /* Margin */
@@ -335,6 +342,53 @@
   font-size: 15px;
 }
 
-.success{
+.approved{
     color: rgb(85, 138, 5);
+    text-transform: capitalize;
+    flex:1;
 }
+
+.pending {
+  color: rgb(244, 248, 0);
+  text-transform: capitalize;
+  flex:1;
+}
+
+.rejected{
+  color: red;
+  text-transform: capitalize;
+  flex:1;
+}
+
+.empty{
+  display: none;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 100%;
+  color:#815f5f;
+
+ }
+ 
+ iframe{
+  border: 1px solid white;
+ }
+
+
+/* Skeleton loader */
+
+/* .skeleton {
+  opacity: .7;
+  animation: skeleton-loader 1s linear infinite alternate;
+
+}
+
+@keyframes skeleton-loader {
+  0% {
+    background-color: hsl(200, 20%, 70%);
+}
+
+100%{
+  background-color: hsl(200, 20%, 95%);
+}
+} */
