--- a/css/styles.css
+++ b/css/styles.css
@@ -85,14 +85,21 @@ header {
   border-radius: var(--radius);
 }
 
+.form-search{
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
 .search {
   padding: 3px 0px;
   font-family: inherit;
   font-size: 18px;
   border: none;
   outline: none;
-  margin-left: 5px;
-  width: 95%;
+  margin-left: 10px;
+  flex:1;
+  color:#767676
 }
 
 .icon {
@@ -192,7 +199,7 @@ header {
 
 .books .book-item {
   height: 365px;
-  width: 230px;
+  width: 100%;
   overflow: hidden;
   background-color: #fcfaf9;
   border-radius: 6px;
@@ -307,4 +314,40 @@ footer ul a:hover {
 
 .fa-twitter:hover {
   color: #1c9cea;
+}
+
+/* PreLoader */
+
+.loader{
+
+}
+
+/* Skeleton loader */
+
+.skeleton {
+  animation: skeleton-loader 1s linear infinite alternate;
+
+}
+
+@keyframes skeleton-loader {
+  0% {
+    background-color: hsl(33, 16%, 53%);
+}
+
+100%{
+  background-color: hsl(33, 12%, 80%);
+}
+}
+
+.skeleton-image{
+  width:100%;
+  height:250px;
+}
+
+.skeleton-text{
+  height: .9rem;
+  border-radius: .125rem;
+  width: 70%;
+  margin: auto;
+  margin-top: 8px;;
 }
